--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,3 +1,11 @@
 <div id='container'>
+  <h1>Links</h1>
+  <form name="linkSearch">
+    <input type="text" ng-model="searchedLink" placeholder="filter">
+  </form>
+  <ul class="link">
+    <li ng-repeat="link in linklist | filter: searchedLink">
+    </li>
+  </ul>
   <!-- Your html here -->
 </div>
