--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,6 +1,8 @@
 <div id='container'>
 <!-- Your code here -->
-
+  <h1>Shorten Link</h1>
+  <form name="linksForm" ng-submit='shortenLink()'>
+    <input type="url" ng-model='link.linkname'>
+    <button>Submit Link</button>
+  </form>
 </div>
-
-
